# mpl-tools

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  conf.py  contributing.rst  dev_guide.html  dev_guide.py  index.html  index.rst
docs/mpl_tools/: ax_placement.html  conftest.html  fig_layout.html  index.html  log_toggler.html  misc.html  place.html  place_ax.html  sci.html  visibility.html
docs/templates/: config.mako  head.mako
mpl_tools/: __init__.py  ax_placement.py  conftest.py  fig_layout.py  log_toggler.py  misc.py  place.py  place_ax.py  sci.py  visibility.py
src/mpl_tools/: __init__.py  ax_placement.py  log_toggler.py  misc.py  skeleton.py
tests/: __init__.py  conftest.py  test_1.py  test_2.py  test_fig_layout.py  test_log_toggler.py  test_misc.py  test_place.py  test_sci.py  test_skeleton.py  test_visibility.py
