# Ref dev_guide.py for some comments on this config.

[tool.poetry]
name = "mpl-tools"
version = "0.2.22"
description = "Tools for working with matplotlib" # Set == Github descript.
authors = ["patricknraanes <patrick.n.raanes@gmail.com>"]
license = "MIT"
readme = "README.md" # puts the README on PyPI
keywords = ["matplotlib", "plotting"]
repository = "https://github.com/patricknraanes/mpl-tools"
documentation = "https://patricknraanes.github.io/mpl-tools"
#homepage = "https://python-poetry.org/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

##################
#  Dependencies  #
##################

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = ">=3.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
#patlib = {path = "../patlib"} # Provides ipython, debuggers, etc

pyqt5 = "*" # GUI-backend for mpl
pdoc3 = "^0.9.2" # Doc generation

# Note: Poetry/tox integration is subject to rapid change, ref dev_guide.py
tox = "^3.20.1"
tox-poetry-installer = {extras = ["poetry"], version = "^0.6.1"}

pre-commit = "*"

# Test
pytest = ">=6" # >6 to enable config in pyproject.toml
pytest-cov = "*"
coverage = {extras = ["toml"], version = ">=5.1"}
# "toml" and ">5.0b1" to enable config in pyproject.toml
pytest-sugar = "*"
# pytest-benchmark pytest-clarity pytest-xdist

# Lint
flakehell = "*"
# NB: plugins must also be ENABLED in [tool.flakehell.plugins]
# NB: plugins should also be listed in .pre-commit-config.yaml
flake8-commas = "*"
flake8-docstrings = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-isort = "*"
flake8-builtins = "*"
pep8-naming = "*"


##################
#  Config tests  #
##################

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{7,8,9}
toxworkdir={homedir}/.tox
isolated_build = True

[testenv]
platform = linux|darwindeps
install_dev_deps = true
commands =
    pytest {posargs}
"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report term-missing"
#testpaths = ["tests", "integration"] # norecursedirs suffices
norecursedirs = """.* build dist CVS _darcs {arch} *.egg venv \
tmp*""" # add tmp to the above (defaults)

[tool.coverage.run]
branch = true # stricter
source = ["mpl_tools"]
#omit = ["bad_file.py"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

####################
#  Config linting  #
####################

[tool.autopep8]
max_line_length = 88
ignore = "W6"

[tool.flakehell]
exclude = [".*", "README.*", "example*.py"]
max_line_length = 88
format = "grouped" # also try "stat"
show_source = false
#whitelist = "../../allowlist.txt" # Used by flake8-spellcheck.

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
#mccabe = ["+*"]
#pylint = ["+*"]
pep8-naming = ["+*",
    # ignore lowercase demands:
    "-N802", "-N803", "-N806"]
#flake8-bandit = ["-*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*", "-C408"]
#flake8-darglint = ["+*"]
flake8-commas = ["+*"]
flake8-docstrings = ["+*", "-D105"]
#flake8-eradicate = ["+*"]
#flake8-isort = ["+*"]
#flake8-pytest-style = ["+*"]
#flake8-spellcheck = ["+*"]
