# Ref dev_guide.py for some comments on this config.

[tool.poetry]
name = "mpl-tools"
version = "0.4.3"
description = "Tools for working with matplotlib" # Set == Github descript.
authors = ["patricknraanes <patrick.n.raanes@gmail.com>"]
license = "MIT"
readme = "README.md" # puts the README on PyPI
keywords = ["matplotlib", "plotting"]
repository = "https://github.com/patricknraanes/mpl-tools"
documentation = "https://patricknraanes.github.io/mpl-tools"
#homepage = "https://python-poetry.org/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

##################
#  Dependencies  #
##################

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "~=3.7"

[tool.poetry.group.dev.dependencies]
scipy = "*"
pdoc3 = "^0.9.2"
pre-commit = "*"
pytest = ">=6"
pytest-cov = "*"
coverage = {extras = ["toml"], version = ">=5.1"}
pytest-sugar = "*"
pep8-naming = "*"


##################
#  Config tests  #
##################

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{7,8,9}
toxworkdir={homedir}/.tox
isolated_build = True

[testenv]
platform = linux|darwindeps
install_dev_deps = true
commands =
    pytest {posargs}
"""

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report term-missing --doctest-modules"
#testpaths = ["tests", "integration"] # norecursedirs suffices
norecursedirs = """.* build dist CVS _darcs {arch} *.egg venv \
tmp*""" # add tmp to the above (defaults)

[tool.coverage.run]
branch = true # stricter
source = ["mpl_tools"]
#omit = ["bad_file.py"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

####################
#  Config linting  #
####################

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E226",  # missing whitespace around arithmetic operator
    "E221",  # multiple spaces before operator (alignment)
    "N802", "N803", "N806",  # lowercase variable names
    "UP031",  # percent format — pre-existing style
    "B904",   # raise-without-from — pre-existing
    "C408",   # unnecessary dict() — pre-existing
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]
